# ask-anything-ui-agentic

./: .env.example  .env.local.example  .gitignore  CLAUDE.md  README.md  convex.json  package.json
.claude/: settings.json
adws/: pyproject.toml
adws/adw_tests/: health_check.py
ai_docs/: README.md  adw_implementation_guide.md
app/: globals.css  layout.tsx  page.tsx
app_docs/: feature-gist-001-gist-creation-onboarding.md
convex/: gists.ts  schema.ts
docs/: FIGMA-INTEGRATION.md  INTEGRATION.md  PLAN.md  PROJECT-CONCEPTS.md  PROJECT-DOCS.md  PROJECT-REVIEW.md  REACT-WIDGET-PIPELINE-IMPLEMENTATION-PLAN.md  REACT-WIDGET-PIPELINE-TODO.md  README.md  TOKENS.md  react-widget-architecture-docs.md  ui-ux-platform-concepts.md
hooks/: use-gist-form.ts  use-widget-api.ts
lib/: convex.ts  generator.ts  gist-templates.ts  logger.ts  scraper.ts
logs/: chat.json  notification.json  status_line.json  stop.json  subagent_stop.json
public/: widget-host-test.html
scripts/: build.widget.ts  initialize.widget.ts  start.sh
specs/: adw-implementation-ai-developer-workflows.md  collapsed-state-bug.md  gist-creation-onboarding-flow.md  gist-creation-widget-dynamic-height.md  gist-creation-widget-suggestion-buttons.md  gist-platform-infrastructure-setup.md  gist-widget-horizontal-shift-on-typing.md  gist-widget-positioning-conflict-absolute-vs-flex.md  gist-widget-slug-preview-layout-shift.md  gizmo-style-preview-editor.md  gradient-border-not-applied-fix.md  issue-2-adw-a3f0d299-sdlc_planner-change-gist-platform-title.md  missing-svg-icons-cdn-url-bug.md  (+6 more)
(+121 files in other folders)
